--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-6 well">
             <p><a href="/admin">Administration Console</a></p>
-            <p>Login Placeholder</p>
+            <p><a href="/login">Login Placeholder</a></p>
         </div>
     </div>
     
