--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -4,7 +4,7 @@
         {{> navbar-left}}
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Feedback</h1>
-            <div class="table-responsive">
+            {{!-- <div class="table-responsive"> --}}
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -56,7 +56,7 @@
                         {{/each}}
                     </tbody>
                 </table>
-            </div>
+            {{!-- </div> --}}
         </div>
     </div>
 </div>
