--- a/views/create-user.handlebars
+++ b/views/create-user.handlebars
@@ -2,7 +2,18 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <h1>Add a user</h1>
-            {{> name-password-form}}
+            <form action="/user" method="POST">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" class="form-control" name="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" class="form-control" name="password" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+            <p>Already have a user account? <a href="/login">Log in</a>.</p>
         </div>
     </div>
 </div>
