--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="jumbotron">
-        <h1>CAI Documentation Feedback Portal</h1>
+        <h1>Simple Feedback</h1>
     </div>
     <div class="row">
         <div class="col-md-6 well">
