--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,9 +2,8 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <h1>Log in</h1>
-            <p>Log in or register</p>
             {{> name-password-form}}
-            <a href="/user">Add a user</a>
+            <a href="/user">Add a user account</a>.
         </div>
     </div>
 </div>
