--- a/views/partials/name-password-form.handlebars
+++ b/views/partials/name-password-form.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form action="/login" method="POST">
     <div class="form-group">
         <label for="username">Username:</label>
         <input type="text" id="username" class="form-control" name="username" placeholder="Username">
