--- a/views/partials/navbar-top.handlebars
+++ b/views/partials/navbar-top.handlebars
@@ -11,7 +11,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">User Profile</a></li>
+                <li><a href="#">User: {{user.username}}</a></li>
+                <li><a href="/logout">Log out</a></li>
             </ul>
         </div>
     </div>
