--- a/views/create-user.handlebars
+++ b/views/create-user.handlebars
@@ -13,7 +13,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-            <p>Already have a user account? <a href="/login">Log in</a>.</p>
+            <p>Already have a user account? <a href="/">Log in</a>.</p>
         </div>
     </div>
 </div>
