--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
         <h1>Simple Feedback</h1>
     </div>
     <div class="row">
-        <div class="col-md-6 well">
-            <p><a href="/admin">Administration Console</a></p>
-            <p><a href="/login">Log in</a></p>
+        <div class="col-md-6 col-md-offset-3 well">
+            <h1>Log in</h1>
+            <p>{{> name-password-form}}</p>
         </div>
     </div>
     
