--- a/views/partials/navbar-left.handlebars
+++ b/views/partials/navbar-left.handlebars
@@ -3,6 +3,9 @@
         <li><a href="/admin">Feedback Dashboard</a></li>
     </ul>
     <ul class="nav nav-sidebar">
+        <li><a href="/user">Add a user</a></li>
+    </ul>
+    <ul class="nav nav-sidebar">
         <li><a href="/test">Test Form</a></li>
         <li><a href="../html/test/topic_01.html" target="_blank">Test Topic 01</a></li>
         <li><a href="../html/test/topic_02.html" target="_blank">Test Topic 02</a></li>
