handlebars tweaks, protecting additional routes

--- a/views/create-user.handlebars
+++ b/views/create-user.handlebars
@@ -11,7 +11,7 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" class="form-control" name="password" placeholder="Password">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Add User</button>
             </form>
             <p>Already have a user account? <a href="/">Log in</a>.</p>
         </div>
