--- a/views/partials/navbar-left.handlebars
+++ b/views/partials/navbar-left.handlebars
@@ -1,9 +1,9 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
-        <li><a href="/admin">Feedback Dashboard</a></li>
+        <li><a href="/admin"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> Feedback Dashboard</a></li>
     </ul>
     <ul class="nav nav-sidebar">
-        <li><a href="/user">Add a user</a></li>
+        <li><a href="/user"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add a user</a></li>
     </ul>
     <ul class="nav nav-sidebar">
         <li><a href="/test">Test Form</a></li>
