--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -2,61 +2,6 @@
 <div class="container-fluid">
     <div class="row">
         {{> navbar-left}}
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Feedback</h1>
-            {{!-- <div class="table-responsive"> --}}
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Feedback ID</th>
-                            {{!-- <th>Jira</th> --}}
-                            <th>Helpful</th>
-                            <th>Comment</th>
-                            <th>Timestamp</th>
-                            <th>Page Title</th>
-                            <th>URL</th>
-                            <th>Inaccurate</th>
-                            <th>Outdated</th>
-                            <th>Bad Search Result</th>
-                            <th>Unclear</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each data}}
-                        {{#if helpful}}
-                            <tr class="success" data-id="{{id}}">
-                        {{else}}
-                            <tr class="danger" data-id="{{id}}">
-                        {{/if}}
-                            <td>{{id}}</td>
-                            {{!-- {{#if jiraSent}}
-                                <td><button class="btn btn-default" type="button" disabled="disabled">Sent</button></td>
-                            {{else}}
-                                <td><button class="btn btn-primary" type="button" disabled="disabled">Send</button></td>
-                            {{/if}} --}}
-                            <td>{{helpful}}</td>
-                            <td>{{comment}}</td>
-                            <td>{{createdAt}}</td>
-                            <td>{{pageTitle}}</td>
-                            <td><a href="{{url}}" target="_blank">{{url}}</a></td>
-                            <td>{{inaccurate}}</td>
-                            <td>{{outdated}}</td>
-                            <td>{{badSearchResult}}</td>
-                            <td>{{unclear}}</td>
-                            <td>
-                                <form method="POST" action="/api/delete">
-                                    <div class="form-group">
-                                        <input id="deleteFeedback" class="form-control" type="hidden" name="feedbackId" value={{id}}>
-                                        <button class="btn btn-danger" type="submit">Delete</button>
-                                    </div>
-                                </form>
-                            </td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            {{!-- </div> --}}
-        </div>
+        {{> feedback-table}}
     </div>
 </div>
