--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,12 @@
 <div class="container">
     <div class="jumbotron">
-        <h1>Simple Feedback</h1>
+        <h1><span class="glyphicon glyphicon-comment"></span> Simple-Feedback</h1>
+        <p>A simple system for aggregating and managing anonymous user feedback from various web pages.</p>
     </div>
     <div class="row">
         <div class="col-md-6 col-md-offset-3 well">
             <h1>Log in</h1>
-            <p>{{> name-password-form}}</p>
+            <p>{{> login-form}}</p>
         </div>
     </div>
     
