--- a/views/partials/login-form.handlebars
+++ b/views/partials/login-form.handlebars
@@ -7,5 +7,5 @@
         <label for="password">Password:</label>
         <input type="password" id="password" class="form-control" name="password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Log in</button>
 </form>
