--- a/views/partials/navbar-top.handlebars
+++ b/views/partials/navbar-top.handlebars
@@ -11,8 +11,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">User: {{user.username}}</a></li>
-                <li><a href="/logout">Log out</a></li>
+                <li><p class="navbar-text"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User: {{user.username}}</p></li>
+                {{!-- <li><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User: {{user.username}}</a></li> --}}
+                <li><a href="/logout"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log out</a></li>
             </ul>
         </div>
     </div>
