--- a/views/create-user.handlebars
+++ b/views/create-user.handlebars
@@ -1,5 +1,7 @@
-<div class="container">
+{{> navbar-top}}
+<div class="container-fluid">
     <div class="row">
+        {{> navbar-left}}
         <div class="col-md-4 col-md-offset-4">
             <h1>Add a user</h1>
             <form action="/user" method="POST">
@@ -13,7 +15,6 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Add User</button>
             </form>
-            <p>Already have a user account? <a href="/">Log in</a>.</p>
         </div>
     </div>
 </div>
