--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,5 +1,5 @@
 {{> navbar-top}}
-<div class="container-fluid">
+<div class="container-fluid main">
     <div class="row">
         {{> navbar-left}}
         {{> feedback-table}}
