--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container login">
     <div class="jumbotron">
         <h1><span class="glyphicon glyphicon-comment"></span> Simple-Feedback</h1>
         <p>A simple system for aggregating and managing anonymous user feedback from various web pages.</p>
