--- a/views/partials/feedback-table.handlebars
+++ b/views/partials/feedback-table.handlebars
@@ -5,7 +5,7 @@
             <thead>
                 <tr>
                     <th>Feedback ID</th>
-                    {{!-- <th>Jira</th> --}}
+                    <th>Jira</th>
                     <th>Helpful</th>
                     <th>Comment</th>
                     <th>Timestamp</th>
@@ -26,11 +26,11 @@
                     <tr class="danger" data-id="{{id}}">
                 {{/if}}
                     <td>{{id}}</td>
-                    {{!-- {{#if jiraSent}}
+                    {{#if jiraSent}}
                         <td><button class="btn btn-default" type="button" disabled="disabled">Sent</button></td>
                     {{else}}
                         <td><button class="btn btn-primary" type="button" disabled="disabled">Send</button></td>
-                    {{/if}} --}}
+                    {{/if}}
                     <td>{{helpful}}</td>
                     <td>{{comment}}</td>
                     <td>{{createdAt}}</td>
